Fix width error that caused extra spacing

--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ li {
 
 /* -------------------------TOOLBAR------------------------------------ */
 #toolbar {
-  width: 100vw;
+  width: 100%;
   max-height: 22vh;
   display: flex;
   flex-direction: column;
@@ -181,7 +181,7 @@ li {
 .home-wrapper {
   padding: 12px;
   display: flex;
-  max-width: 100vw;
+  max-width: 100%;
   flex-direction: column;
 }
 
@@ -281,7 +281,7 @@ li {
   background: url(images/pattern.png);
   background-color: #272a31;
   background-repeat: repeat;
-  width: 100vw;
+  width: 100%;
   display: flex;
   justify-content: center;
   margin: auto;
@@ -399,7 +399,7 @@ li {
 /* -----------------------------------FOOTER---------------------------- */
 
 #footer {
-  width: 100vw;
+  width: 100%;
   display: none;
 }
 
@@ -443,7 +443,7 @@ li {
 
 /* -----------------------------ABOUT MAIN---------------------------------------- */
 #about {
-  width: 100vw;
+  width: 100%;
   background: url(images/about_bg_01.png);
   background-repeat: no-repeat;
   display: flex;
@@ -537,7 +537,7 @@ li {
 
 /* --------------------------------ABOUT-STAGE----------------------------------- */
 #stage {
-  width: 100vw;
+  width: 100%;
   background-color: #fff;
   display: flex;
   justify-content: center;
@@ -580,7 +580,7 @@ li {
 /* ------------------------------------ABOUT--PAST-EVENTS------------------------- */
 
 #past {
-  width: 100vw;
+  width: 100%;
   display: flex;
   justify-content: center;
 }
@@ -672,7 +672,7 @@ li {
 /* ----------------------------------ABOUT-FOOTER---------------------------- */
 
 #about-footer {
-  width: 100vw;
+  width: 100%;
 }
 
 .about-top-footer {
@@ -684,7 +684,7 @@ li {
   padding-bottom: 20px;
   filter: grayscale(0.85);
   opacity: 0.85;
-  width: 100vw;
+  width: 100%;
 }
 
 @media (min-width: 768px) {
@@ -769,7 +769,7 @@ li {
 /* -----------------------------SPEAKERS-SECTION-------------------------------- */
 
 #speakers {
-  width: 100vw;
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
